--- a/UmbracoHangfire/UmbracoHangfire.csproj
+++ b/UmbracoHangfire/UmbracoHangfire.csproj
@@ -260,7 +260,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="App_Plugins\UmbracoHangfire\package.manifest" />
+    <Content Include="App_Plugins\UmbracoHangfire\package.manifest" />
     <None Include="packages.config" />
     <None Include="UmbracoHangfire.nuspec" />
   </ItemGroup>
