--- a/.github/workflows/NetFxCI.yml
+++ b/.github/workflows/NetFxCI.yml
@@ -32,9 +32,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
       
       - name: Restore NuGet Packages 
-      - run: nuget restore UmbracoHangfire.sln
+        run: nuget restore UmbracoHangfire.sln
       
       - name: Build Solution
-      - run: msbuild UmbracoHangfire.sln
-      
-      
+        run: msbuild UmbracoHangfire.sln
